# oxide-communityedition-v8.6.9

./: Cargo.toml  KALI-README.md  LICENSE  README.md  agent.rs  build.rs  crawls.rs  db.rs  filter.rs  hybrid.rs  lib.rs  main.rs  recon.rs
advanced/: api_fuzzer.rs  cache.rs  cluster.rs  crawler_js.rs  evasion.rs  ml_detector.rs  mod.rs  plugin.rs  rate_limiter.rs  session.rs  websocket.rs
ai/: exploit_analyzer.rs  mod.rs  pattern_learner.rs  payload_mutator.rs  response_analyzer.rs
cgi_database/: oxide_tests.db  oxide_tests.db.enc
cli/: args.rs  colors.rs  config.rs  display.rs  mod.rs  output.rs  parser.rs  progress.rs  spinner.rs
core/: coordinator.rs  dispatcher.rs  engine.rs  mod.rs  scanner.rs  worker.rs
detection/: analyzer.rs  behavior.rs  confirm.rs  context.rs  matcher.rs  mod.rs  scorer.rs  signatures.rs  timing.rs
http/: client.rs  cookies.rs  crawl_types.rs  headers.rs  headless.rs  mod.rs  proxy_loader.rs  redirect.rs  request.rs  response.rs  tls.rs  useragents.rs
hypersecurity/: Cargo.toml
insta/: mod.rs
payload/: command_injection.rs  encoder.rs  fuzzer.rs  generator.rs  lfi.rs  mod.rs  mutator.rs  sql_injection.rs  xss.rs
report/: csv.rs  generator.rs  html.rs  json.rs  mod.rs  xml.rs
scanner/: blind_sqli_scanner.rs  cmd_injection_scanner.rs  common_app_scanner.rs  cors_scanner.rs  db_fingerprinter.rs  default_creds_scanner.rs  hypersecurity_cf.rs  lfi_scanner.rs  mod.rs  path_traversal_scanner.rs  precision.rs  sqli_scanner.rs  tls_scanner.rs  xss_scanner.rs
session_hijack/: mod.rs
src/: agent.rs  crawls.rs  hybrid.rs  main.rs
src/advanced/: api_fuzzer.rs  cache.rs  (+7 more)
utils/: downloader.rs  mod.rs  time.rs  url.rs
zero_day/: anomaly.rs  baseline.rs  classifier.rs  engine.rs  features.rs  hpp.rs  mod.rs  standalone.rs  trainer.rs
(+77 files in other folders)
